data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_732.wast
;; 3. **Test for Conditional Branching based on Stack Top Value within Loop**    - **Description**: Insert a `br_if` instruction inside a loop that evaluates a condition based on the top value of the operand stack, expecting the branch not to occur if the value is 0.    - **Constraint Checked**: Ensures stack top value condition is correctly evaluated.    - **Incorrect Condition Evaluation**: Checks if the `br_if` instruction erroneously branches regardless of the stack top value.

(assert_invalid
  (module
    (func (result i32)
      (i32.const 1)
      (loop (result i32)
        (i32.const 0)
        (br_if 0)
        (i32.const 42)
      )
    )
  )
  "conditional branch within loop"
)